  of Abella in parallel using the same source files.
* The *first* Type or Kind declaration was accidentally being added to
  the specification signature.  
  (Identified by Farah Al Wardani, @innofarah)
* Unification of reasoning-level formulas attempts type unification instead
  of assuming ground types.
  (#143, reported by @RandomActsOfGrammar)


Changes in 2.0.7
------------------

This release adds no functionality, but fixes a number of minor bugs. It also
makes Abella compilable with OCaml versions 4.08.0 and higher.


Bugfixes

* Import statements with file paths containing . no longer break
  the HTML exporter
* Quote filenames when making shell calls  
  (#115, reported by @JimmyZJX)
* Asserting trivial facts incorrectly left variables instantiated  
  (#113, reported by Jinxu Zhao)
* Fully check that types are well-formed  
  (#128, reported by @RandomActsOfGrammar)
* Case for async object sequents should normalize before clause selection  
  (#129, reported by Guillaume Melquiond)
* Monotone for backchaining sequents should preserve backchaining  
  (Related to #129, formally justified by conjunct 2 of logic/hh_meta.thm)


Changes in 2.0.6 from 2.0.5
---------------------------

Additions

* The schematic polymorphism branch has been merged.

  You can read more about it here:

     http://abella-prover.org/schm-poly/index.html

  Thanks to Yuting Wang and Gopalan Nadathur for developing the theory
  to match the implementation by Yuting.


Tweaks to existing functionality

* Polymorphic definitions and theorems in the style of version 2.0.5
  are now recast in the style of schematic polymorphism in 2.0.6.
  There should be minimal user-visible impact.


Bugfixes

* Confusing nominal and other constants in eta-contraction
  #110 (Reported by Yuting Wang)
* Permutations of nominal constants in equivariant
  matching failed to respect types.
  #107 (Reported by Matija Pretnar)
* Error in renaming of bound variabls in metaterms.